# arduscope

./: .gitignore  LICENSE  README.md  index.md  setup.cfg
arduscope/: __init__.py  arduscope.ino  arduscope.py  fit_tools.py  wave_generator.py
scripts/: example.py  uso_basico.py
