[metadata]
name = arduscope
version = 0.1
author = Alejandro Ezequiel Mazzeo
description =
    Un osciloscopio basado en Arduino + Python
    y orientado a laboratorios de enseñanza
url = https://github.com/alemazzeo/arduscope.git
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License


[options]
packages = arduscope
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    pyserial
setup_requires = setuptools; setuptools_scm